SAK-17620 commit Buckett patch.
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@76020 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/news-tool/tool/src/webapp/vm/news/chef_news-Layout.vm
+++ b/news-tool/tool/src/webapp/vm/news/chef_news-Layout.vm
@@ -20,7 +20,13 @@
 		#end
 		#if($channel.Title)
 			<h3>
+			#if($channel.Link)
+				<a href="$channel.Link" target="_blank" title="$channel.Title">
+			#end
 				$channel.Title
+			#if($channel.Link)
+				</a>
+			#end
 			</h3>
 		#end
 		#if($channel.Description)
@@ -29,9 +35,7 @@
 			</p>
 		#end
 		<p class="textPanelFooter">
-		#if($channel.Link)
-			<a href="$channel.Link" target="_blank" title="$channel.Title">($graphic_version)</a>
-		#end
+
 		#if($channel.Copyright)
 			- $channel.Copyright
 		#end
