--- a/web-tool/tool/src/webapp/vm/web/chef_iframe.vm
+++ b/web-tool/tool/src/webapp/vm/web/chef_iframe.vm
@@ -12,12 +12,57 @@
 		<iframe 
 			width="100%"
 			id="wciframe"
+			name="wciframe"
 			style="width:100%;padding:0 !important; height:$height"
 			frameborder="0"
 			marginwidth="0"
 			marginheight="0"
 			scrolling="auto"
-			src="$!validator.escapeHtml($url)">
+			src="$!validator.escapeHtml($url)"
+			onload="updateMainFrameHeight();">
 		</iframe>
 	</div>
 </div>
+
+<script  type="text/javascript" language="JavaScript">
+
+	function updateMainFrameHeight()
+	{
+		var iframeUrl = "$!validator.escapeHtml($url)";
+		//checking for different domain so that resize does not fire (results in error when domain is different from iframe domain). 
+		if (iframeUrl.indexOf(document.domain) !==-1)
+		{
+			var frame = parent.document.getElementById(window.name);
+			if (frame)
+			{
+				// reset the scroll
+				parent.window.scrollTo(0,0);
+				
+				// Mozilla way to detect height
+				var height = document.body.offsetHeight;
+				
+				// Internet Explorer way to detect height
+				if (document.body.scrollHeight)
+				{
+					height = document.body.scrollHeight;
+				}
+	
+				var innerIframe = document.getElementById("wciframe");
+				var innerIframeName = innerIframe.name;
+				var iHeight = 0;
+				// Internet Explorer way to detect height
+				if (innerIframe.contentWindow.document.body.scrollHeight)
+				{
+					iHeight = innerIframe.contentWindow.document.body.scrollHeight;
+				}
+				document.getElementById(innerIframeName).style.height=iHeight + "px";
+				height += iHeight;
+				if (frame) 
+				{
+					frame.height = height;
+				}
+			}	
+		}
+		
+	}
+</script>
