--- a/web-tool/tool/src/webapp/vm/web/chef_iframe.vm
+++ b/web-tool/tool/src/webapp/vm/web/chef_iframe.vm
@@ -18,7 +18,7 @@
 			width="100%"
 			id="wciframe"
 			name="wciframe"
-			style="width:100%;padding:0 !important; height:$height"
+			style="width:100%;padding:0 !important; height:$validator.escapeHtml($height)"
 			frameborder="0"
 			marginwidth="0"
 			marginheight="0"
