SAK-19603 Apply change manually to 2-7-x (merge conflict): trunk change is r86015
git-svn-id: https://source.sakaiproject.org/svn/web/branches/sakai-2.7.x@86303 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-tool/tool/src/webapp/vm/web/chef_iframe.vm
+++ b/web-tool/tool/src/webapp/vm/web/chef_iframe.vm
@@ -12,7 +12,7 @@
 		<iframe 
 			width="100%"
 			id="wciframe"
-			style="width:100%;padding:0 !important; height:$height"
+			style="width:100%;padding:0 !important; height:$validator.escapeHtml($height)"
 			frameborder="0"
 			marginwidth="0"
 			marginheight="0"
