--- a/web-tool/tool/src/webapp/vm/web/chef_iframe-customize.vm
+++ b/web-tool/tool/src/webapp/vm/web/chef_iframe-customize.vm
@@ -14,18 +14,18 @@
 		<p class="shorttext indnt1"> 
 			<span class="reqStar">*</span>
 			<label for="$form_tool_title"> $tlang.getString("gen.tootit")</label>
-			<input type="text" id="title" name="title" value="$!validator.escapeHtml($title)" /><br />
+			<input type="text" id="title" name="title" value="$!validator.escapeHtml($title)" maxlength="$max_length_title"/><br />
 		</p>	
 		<p class="shorttext indnt1">
 			<span class="reqStar">*</span>
 			<label for="$form_page_title"> $tlang.getString("gen.pagtit")</label>
-			<input type="text" id="$form_page_title" name="$form_page_title" value="$!validator.escapeHtml($page_title)" /><br />
+			<input type="text" id="$form_page_title" name="$form_page_title" value="$!validator.escapeHtml($page_title)" maxlength="$max_length_title" /><br />
 		</p>	
 		#else
 		<p class="shorttext indnt1">
 			<span class="reqStar">*</span>
 			<label for="title"> $tlang.getString("gen.title")</label>
-			<input type="text" id="title" name="title" value="$!validator.escapeHtml($title)" /><br />
+			<input type="text" id="title" name="title" value="$!validator.escapeHtml($title)" maxlength="$max_length_title" /><br />
 		</p>	
 		#end
 		<p class="shorttext indnt1">
@@ -53,7 +53,7 @@
 #if ($source)
 		<p class="shorttext indnt1">
 			<label for="source">$tlang.getString("gen.url")</label>
-			<input type="text" name="source" id="source" value="$!validator.escapeHtml($source)" size="40" />
+			<input type="text" name="source" id="source" value="$!validator.escapeHtml($source)" size="40"/>
 		</p>
 #end
 
