--- a/web-tool/tool/src/webapp/vm/web/chef_iframe-site-customize.vm
+++ b/web-tool/tool/src/webapp/vm/web/chef_iframe-site-customize.vm
@@ -13,7 +13,7 @@
 		<p class="shorttext indnt1">
 			<span class="reqStar">*</span>
 			<label for="title"> $tlang.getString("gen.title")</label>
-			<input type="text" id="title" name="title" value="$!validator.escapeHtml($title)" /><br />
+			<input type="text" id="title" name="title" value="$!validator.escapeHtml($title)" maxlength="$max_length_title" /><br />
 		</p>	
 		<p class="shorttext indnt1">
 			<label for="height">$tlang.getString("gen.height")</label>
@@ -44,7 +44,7 @@
 
 		<p class="shorttext indnt1">
 			<label for="infourl">$tlang.getString("gen.info.url")</label>
-			<input type="text" name="infourl" id="infourl" value="$!validator.escapeHtml($info_url)" size="40" />
+			<input type="text" name="infourl" id="infourl" value="$!validator.escapeHtml($info_url)" size="40" maxlength="$max_length_info_url"/>
 		</p>
 		<p class="instruction">$tlang.getString("gen.info.url.msg")</p>
 
