--- a/web-tool/tool/src/webapp/vm/web/chef_iframe.vm
+++ b/web-tool/tool/src/webapp/vm/web/chef_iframe.vm
@@ -15,6 +15,7 @@
      #end
 	 	<div class="wcwmenu"> ##style="padding:0; margin:3px -2em -1em  -2em">
 		<iframe 
+			title="$tlang.getString("gen.info.title.message")"
 			width="100%"
 			id="wciframe"
 			name="wciframe"
