SAK-20396 - merge trunk 92105 to  27x
git-svn-id: https://source.sakaiproject.org/svn/web/branches/sakai-2.7.x@93065 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-tool/tool/src/webapp/vm/web/chef_iframe.vm
+++ b/web-tool/tool/src/webapp/vm/web/chef_iframe.vm
@@ -10,6 +10,7 @@
 #if ($alertMessage)<div class="alertMessage">$tlang.getString("gen.alert") $validator.escapeHtml($alertMessage)</div>#end
 	 	<div class="wcwmenu"> ##style="padding:0; margin:3px -2em -1em  -2em">
 		<iframe 
+			title="$tlang.getString("gen.info.title.message")"
 			width="100%"
 			id="wciframe"
 			style="width:100%;padding:0 !important; height:$validator.escapeHtml($height)"
