SAK-21623 validation on the web content URL field. New dependency introduced: commons-validator
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@102490 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-tool/tool/src/webapp/vm/web/chef_iframe-customize.vm
+++ b/web-tool/tool/src/webapp/vm/web/chef_iframe-customize.vm
@@ -52,6 +52,7 @@
 		</p>	
 #if ($source)
 		<p class="shorttext indnt1">
+			<span class="reqStar">*</span>
 			<label for="source">$tlang.getString("gen.url")</label>
 			<input type="text" name="source" id="source" value="$!validator.escapeHtml($source)" size="40"/>
 		</p>
