--- a/web-portlet/src/bundle/vm/edit-site.vm
+++ b/web-portlet/src/bundle/vm/edit-site.vm
@@ -1,7 +1,6 @@
-## $Header: /cvs/sakai2/legacy/tools/src/webapp/vm/web/chef_iframe-customize.vm,v 1.7 2005/05/23 21:06:12 suiyy.umich.edu Exp $
 
 <script type="text/javascript">
-	focus_path = [ "title" ];
+	focus_path = [ "title-of-page" ];
 </script>
 
 <div class="portletBody">
@@ -13,8 +12,8 @@
     <form action="$actionUrl" method="post" name="customizeForm" >
 		<p class="shorttext indnt1">
 			<span class="reqStar">*</span>
-			<label for="title"> $tlang.getString("gen.title")</label>
-			<input type="text" id="title" name="title" value="$!validator.escapeHtml($title)" maxlength="$max_length_title" /><br />
+			<label for="title-of-page"> $tlang.getString("gen.title")</label>
+			<input type="text" id="title-of-page" name="title" value="$!title" maxlength="$max_length_title" /><br />
 		</p>	
 		<p class="shorttext indnt1">
 			<label for="height">$tlang.getString("gen.height")</label>
@@ -37,7 +36,7 @@
 					<tr>
 						<td>
 						<textarea id="description" name="description" rows="5" cols="40" tabindex="1" wrap="virtual">$!description</textarea>
-							## TODO: chef_setupformattedtextareaparams("description" "300" "99%" "largecompressed")
+<script type="text/javascript" defer="1">sakai.editor.launch('description', { height: '300', width: '99%', toolbarSet: 'largecompressed' } );</script>
 						</td>
 					</tr>
 			</table>
@@ -45,7 +44,8 @@
 
 		<p class="shorttext indnt1">
 			<label for="infourl">$tlang.getString("gen.info.url")</label>
-			<input type="text" name="infourl" id="infourl" value="$!validator.escapeHtml($info_url)" size="40" maxlength="$max_length_info_url"/>
+            ## Validator called inside the Java
+			<input type="text" name="infourl" id="infourl" value="$!info_url" size="40" maxlength="$max_length_info_url"/>
 		</p>
 		<p class="instruction">$tlang.getString("gen.info.url.msg")</p>
 
