--- a/web-portlet/src/bundle/vm/main.vm
+++ b/web-portlet/src/bundle/vm/main.vm
@@ -2,11 +2,11 @@
 #if ($alertMessage)<div class="alertMessage">$tlang.getString("gen.alert") $alertMessage</div>#end
 #if ($!popup) 
 <script type="text/javascript" language="JavaScript">
-window.open('$!source','BasicLTI');
+window.open('$!source','_blank');
 </script>
 <p>
 $tlang.getString("new.page.launch") </p> <p>
-<a href="$source" onclick="window.open('$!source','BasicLTI'); return false;" target="LTI">$tlang.getString("new.page.relaunch")</a>
+<a href="$source" onclick="window.open('$!source','_blank'); return false;" target="_blank">$tlang.getString("new.page.relaunch")</a>
 </p>
 #else
 #if ($!maximize) 
@@ -16,8 +16,8 @@ try { portalMaximizeTool(); } catch (err) { }
 #end
 <div class="wcwomenu"> ##style="padding:0; margin:-.3em -2em -1em -2em">
 <iframe 
+    title="$tlang.getString("gen.info.title.message")"
 	width="100%"
-	id="wciframe"
 	style="width:100%;padding:0 !important; height:$height"
 	frameborder="0"
 	marginwidth="0"
