--- a/web-portlet/src/bundle/vm/main.vm
+++ b/web-portlet/src/bundle/vm/main.vm
@@ -14,8 +14,73 @@ $tlang.getString("new.page.launch") </p> <p>
 try { portalMaximizeTool(); } catch (err) { }
 </script>
 #end
+<script type="text/javascript" language="JavaScript">
+
+if ( '$!source'.indexOf('http://') == 0 || '$!source'.indexOf('https://') == 0 ) {
+
+    var timer$placement = false;
+    function loaded$placement() {
+        console.log && console.log("$!source loaded event");
+        if ( timer$placement != false ) {
+            // window.clearTimeout(timer$placement);
+            timer$placement = false;
+        }
+    }
+
+    function timeout$placement() { 
+        var myframe = $("#id$placement");
+        var loaded = false;
+        console.log && console.log("$!source timeout check...");
+        try {
+            var iframeLoc = myframe.get(0).contentWindow.location;
+            iframeLoc = String(iframeLoc);
+            var windowLoc = String(window.location);
+            console.log && console.log("iframe.location="+windowLoc);
+            var ipos = -1;
+            var slashcount = 0;
+            for (var i=0; i<windowLoc.length; i++ ) {
+                if ( windowLoc[i] == '/' ) slashcount++;
+                if ( slashcount == 3 ) {
+                    ipos = i;
+                    break;
+                }
+            }
+            if ( ipos == -1 ) {
+                loaded = false;
+            } else { 
+                var prefix = windowLoc.substring(0, ipos);
+                console.log && console.log("iframe.prefix="+prefix);
+                loaded = iframeLoc.indexOf(prefix) == 0;
+            }
+        } catch(ex) {  // This is an expected/normal/hoped for occurance
+            loaded = true;
+        }
+        if ( ! loaded ) {
+            $('#alert$placement').show();
+        } else {
+            console.log && console.log('$!source load success');
+        }
+            
+    }
+    
+    $(document).ready(function() {
+        $('#id$placement').load(function()  {
+            loaded$placement();
+        });
+        timer$placement = window.setTimeout("timeout$placement()",$loadTime);
+    });
+} else {
+    console.log && console.log('$!source does not start with http:// or https://');
+}
+</script>
+<div class="alertMessage" style="display:none" id="alert$placement">$tlang.getString("gen.alert") 
+$tlang.getString("gen.trouble.loading")
+<a href="$source" onclick="window.open('$!source','_blank'); return false;" target="_blank">$tlang.getString("new.page.relaunch")</a>
+## I think we should have a hide button for this alert div 
+</div>
 <div class="wcwomenu"> ##style="padding:0; margin:-.3em -2em -1em -2em">
 <iframe 
+    id="id$placement"
     title="$tlang.getString("gen.info.title.message")"
 	width="100%"
 	style="width:100%;padding:0 !important; height:$height"
@@ -23,6 +88,7 @@ try { portalMaximizeTool(); } catch (err) { }
 	marginwidth="0"
 	marginheight="0"
 	scrolling="auto"
+    onload="loaded$placement();"
 	src="$!source">
 </iframe>
 </div>
