--- a/web-portlet/src/bundle/vm/main.vm
+++ b/web-portlet/src/bundle/vm/main.vm
@@ -21,12 +21,12 @@ if ( '$!source'.indexOf('http://') == 0 || '$!source'.indexOf('https://') == 0 )
     function timeout$placement() { 
         var myframe = $("#id$placement");
         var loaded = false;
-        console.log && console.log("$!source timeout check...");
+        window.console && console.log("$!source timeout check...");
         try {
             var iframeLoc = myframe.get(0).contentWindow.location;
             iframeLoc = String(iframeLoc);
             var windowLoc = String(window.location);
-            console.log && console.log("iframe.location="+windowLoc);
+            window.console && console.log("iframe.location="+windowLoc);
             var ipos = -1;
             var slashcount = 0;
             for (var i=0; i<windowLoc.length; i++ ) {
@@ -40,7 +40,7 @@ if ( '$!source'.indexOf('http://') == 0 || '$!source'.indexOf('https://') == 0 )
                 loaded = false;
             } else { 
                 var prefix = windowLoc.substring(0, ipos);
-                console.log && console.log("iframe.prefix="+prefix);
+                window.console && console.log("iframe.prefix="+prefix);
                 loaded = iframeLoc.indexOf(prefix) == 0;
             }
         } catch(ex) {  // This is an expected/normal/hoped for occurance
@@ -49,7 +49,7 @@ if ( '$!source'.indexOf('http://') == 0 || '$!source'.indexOf('https://') == 0 )
         if ( ! loaded ) {
             $('#alert$placement').show();
         } else {
-            console.log && console.log('$!source load success');
+            window.console && console.log('$!source load success');
         }
 
     }
@@ -59,7 +59,7 @@ if ( '$!source'.indexOf('http://') == 0 || '$!source'.indexOf('https://') == 0 )
         timer$placement = window.setTimeout("timeout$placement()",$loadTime);
     });
 } else {
-    console.log && console.log('$!source does not start with http:// or https://');
+    window.console && console.log('$!source does not start with http:// or https://');
 }
 </script>
 <div class="alertMessage" style="display:none" id="alert$placement">$tlang.getString("gen.alert") 
