--- a/web-portlet/src/bundle/vm/main.vm
+++ b/web-portlet/src/bundle/vm/main.vm
@@ -15,6 +15,12 @@ try { portalMaximizeTool(); } catch (err) { }
 </script>
 #end
 <script type="text/javascript" language="JavaScript">
+$(document).ready(function() {
+$('.closeMe a').click(function(e){
+    e.preventDefault();
+    $(this).closest('.alertMessage').fadeOut('slow')
+});
+})
 
 if ( '$!source'.indexOf('http://') == 0 || '$!source'.indexOf('https://') == 0 ) {
 
@@ -62,22 +68,22 @@ if ( '$!source'.indexOf('http://') == 0 || '$!source'.indexOf('https://') == 0 )
     window.console && console.log('$!source does not start with http:// or https://');
 }
 </script>
-<div class="alertMessage" style="display:none" id="alert$placement">$tlang.getString("gen.alert") 
+<div class="alertMessage specialLink" style="display:none" id="alert$placement">$tlang.getString("gen.alert") 
 $tlang.getString("gen.trouble.loading")
 <a href="$source" onclick="window.open('$!source','_blank'); return false;" target="_blank">$tlang.getString("new.page.relaunch")</a>
-## I think we should have a hide button for this alert div 
+<p class="closeMe"><a href="#" style="text-decoration:none !important;font-size:110%;color:#c00 !important" title="$tlang.getString("dissmiss.page.relaunch.message")">x <span class="skip">$tlang.getString("dissmiss.page.relaunch.message")</span></a></p> 
 </div>
 <div class="wcwomenu"> ##style="padding:0; margin:-.3em -2em -1em -2em">
 <iframe 
     id="id$placement"
     title="$tlang.getString("gen.info.title.message")"
-	width="100%"
-	style="width:100%;padding:0 !important; height:$height"
-	frameborder="0"
-	marginwidth="0"
-	marginheight="0"
-	scrolling="auto"
-	src="$!source">
+    width="100%"
+    style="width:100%;padding:0 !important; height:$height"
+    frameborder="0"
+    marginwidth="0"
+    marginheight="0"
+    scrolling="auto"
+    src="$!source">
 </iframe>
 </div>
 #end
