--- a/web-portlet/src/bundle/vm/edit.vm
+++ b/web-portlet/src/bundle/vm/edit.vm
@@ -58,7 +58,7 @@ $(document).ready(function() {
 #if ($source)
 		<p class="shorttext indnt1">
 			<label for="source">$tlang.getString("gen.url")</label>
-			<input type="text" name="source" id="source" value="$!source" size="40" />
+			<input type="text" name="source" id="source" value="$!validator.escapeHtml($!source, false)" size="40" />
 		</p>
 #end
 
