--- a/web-portlet/src/bundle/vm/edit.vm
+++ b/web-portlet/src/bundle/vm/edit.vm
@@ -52,7 +52,7 @@ $(document).ready(function() {
 			<label for="customNumberField">
 				$tlang.getString('gen.custheight')
 			</label>
-			<input id="customNumberField" maxlength="4" size="4" type="text" name="customNumberField" #if ($height == "$tlang.getString('gen.heisomelse')") value="$!validator.escapeHtml($custom_height)" #end/>
+			<input id="customNumberField" maxlength="4" size="4" type="text" name="customNumberField" #if ($height == "$tlang.getString('gen.heisomelse')") value="$!validator.escapeHtml($custom_height, false)" #end/>
 			$tlang.getString('gen.pixels')
 		</p>	
 #if ($source)
