--- a/web-portlet/src/bundle/vm/edit-site.vm
+++ b/web-portlet/src/bundle/vm/edit-site.vm
@@ -1,4 +1,6 @@
 
+${includeLatestJQuery}
+
 <script type="text/javascript">
 $(document).ready(function() {
     $('form:first *:input[type!=hidden]:first').focus();
